--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ body {
 .teclado--linha {
     display: flex;
     justify-content: center;
+    align-items: flex-end;
 }
 .teclado--botao{
     width: 70px;
@@ -37,16 +38,16 @@ body {
     box-shadow: 3px 3px #555;
 }
 .botao--branco {
-    background-color: #fff;
+    background-color: #FFF;
     color: #000;
     font-size: 15px;
 }
 .botao--corrige {
-    background-color: #f09046;
+    background-color: #e6863d;
     color: #000;
     font-size: 15px;
 }
-.botao--corfirma {
+.botao--confirma {
     background-color: #48c079;
     color: #000;
     font-size: 17px;
