--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+@keyframes pisca {
+    0% { opacity: 0.2; }
+    50% { opacity: 1;}
+    100% { opacity: 0.2; }
+}
+
+
 body {
     margin: 0;
     display: flex;
@@ -12,11 +19,13 @@ body {
 .tela {
     width: 500px;
     height: 320px;
+    border: 2px solid #555;
     background: linear-gradient(to right, #e8e8e8, #c1c1c1 );
-
-}
+    display: flex;
+    flex-direction: column;
+    }
 .teclado {
-    margin-right: 30x;
+    margin-left: 100x;
     background-color: #403a3a;   
 }
 .teclado--linha {
@@ -50,8 +59,65 @@ body {
 .botao--confirma {
     background-color: #48c079;
     color: #000;
-    font-size: 17px;
+    font-size: 15px;
     width: 90px;
     height: 50px;
 
+}
+
+
+
+.d-1 {
+    flex: 1;
+    display: flex;
+}
+.d-1-left {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    padding-left: 20px;
+}
+.d-1-1 {
+    height: 50px;
+    display: flex;
+    align-items: center;
+}
+.d-1-2{
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.d-1-3{
+    height: 50px;
+}
+.numero {
+    display: inline-block;
+    width: 30px;
+    height: 40px;
+    border: 1px solid black;
+    text-align: center;
+    line-height: 40px;
+    font-size: 25px;
+}
+.pisca{
+    animation-name: pisca;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+
+}
+.d-1-4{
+    flex: 1;
+    line-height: 30px;
+   
+}
+.d-1-right {
+    width: 90px;
+
+}
+.d-2 {
+    height: 50px;
+    font-size: 14px;
+    border-top: 2px solid #000;
+    padding-left: 10px;
 }
