--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body {
     flex-direction: column;
     }
 .teclado {
-    margin-left: 100x;
+    margin-left: 30px;
     background-color: #403a3a;   
 }
 .teclado--linha {
@@ -113,8 +113,26 @@ body {
 }
 .d-1-right {
     width: 90px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
 
 }
+.d-1-imagem{
+    border: 1px solid black;
+    background-color: #fff;
+    text-align: center;
+    font-size: 20px;
+
+}
+.d-1-imagem img{
+    width: 100%;
+}
+.d-1-imagem.small {
+    width: 80%;
+    font-size: 10px;
+}
+
 .d-2 {
     height: 50px;
     font-size: 14px;
