--- a/style.css
+++ b/style.css
@@ -83,7 +83,7 @@ body {
     align-items: center;
 }
 .d-1-2{
-    height: 50px;
+    height: 30px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -138,4 +138,18 @@ body {
     font-size: 14px;
     border-top: 2px solid #000;
     padding-left: 10px;
+}
+
+.aviso--grande {
+    font-size: 40px;
+    font-weight: bold; 
+}
+.aviso--gigante {
+    font-size: 70px;
+    font-weight: bold;
+    text-align: center;
+    flex: 1;
+    display: flex;
+    justify-content: center ;
+    align-items: center;
 }
